<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_codeland"
        android:layout_width="@dimen/dp_210"
        android:layout_height="@dimen/dp_339"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_code_land"
            android:layout_width="@dimen/dp_202"
            android:layout_height="@dimen/dp_100"
            android:src="@drawable/codeland_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_baloon"
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_170"
            android:src="@drawable/phool"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_code_land" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_below_image"
            style="@style/BodyTinnyPoppins"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="center"
            android:text="@string/message_biomedical_kiosk"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_baloon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_below_image2"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/dp_4"
            android:gravity="end"
            android:text="@string/label_for_hce_s"
            android:textColor="@color/orange"
            android:textSize="@dimen/font_size_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_below_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldUserName"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="20dp"
        android:hint="@string/label_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_codeland">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldUserPassword"
        style="@style/TextInputLayoutStyle"
        android:layout_width="@dimen/wrap_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="20dp"
        android:hint="@string/label_userpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/label_login"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldUserPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>